Finish tomorrow, fix wrap issue, color font nav,

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,88 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+
+  display: flex;
+  font-size: 32px;
+  font-weight: 900;
+  padding: 16px;
+  align-items: center;
+}
+
+.containerNest {
+  display: flex;
+  flex-direction: column;
+  padding: 32px;
+}
+.container {
+  display: flex;
+
+  
+  justify-content: stretch;
+  align-content: stretch;
+  flex-wrap: nowrap;
+  flex: 1;
+  margin: auto;
+
+}
+
+.container2 {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.container4 {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap;
+  
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+
+  display: flex;
+  align-self: stretch;
+  min-width: 300px;
+  padding: 16px;
+  justify-content: stretch;
+  flex: 1;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+
+  margin: 10px;
+  align-self: stretch;
+  flex: 1;
 }
+
+a {
+  text-decoration: none;
+  font-size: 24px
+}
+
